--- a/Projet d'axe/css/composants/boutons.css
+++ b/Projet d'axe/css/composants/boutons.css
@@ -17,3 +17,21 @@
    font-size: 20px;
      
 }
+
+ul{
+
+}
+
+li{
+    list-style: circle;
+}
+
+.plus{
+    justify-content: center;
+    background-color: grey;
+    border-radius: 20%;
+    align-items: center;
+    margin-top: 20px;
+    text-align: center;
+    margin-right: 50%;
+}
